# TTMEvolve

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  TTMEvolve-Practice.vbs  TTMEvolve.vbs  config.embedded.json  config.example.json  gui.py  main.py  package-lock.json  package.json  pytest.ini  quick_test.py  requirements.txt  start-embedded.bat  start-gui.bat  start-gui.ps1  start-practice.bat  start-practice.ps1  start-tauri.bat  start-tauri.sh  start.bat  start.ps1  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
agent/: __init__.py  _multi_agent_subprocess.py  action_execution.py  agent.py  builtin_tools.py  config.py  context_sync.py  expert_takeover.py  feature_state.py  goal_dag.py  goal_loop.py  learning_queue.py  maker_guard.py  mcp_client.py  mcp_integration.py  multi_agent.py  plan_first.py  project_introspection.py  react_loop.py  rescue_application.py  rescue_orchestrator.py  rescue_trigger.py  subagent.py  tool_contracts.py  tool_registry.py  tool_validator.py  trajectory_result.py  typed_subloop.py
cli/: harness.py
core/: __init__.py  approval.py  cancellation.py  commit_state.py  condition_dsl.py  conditional_hooks.py  config.py  config_profiles.py  context_compression.py  control_loop.py  event_log.py  (+33 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fast_ops.rs  fast_ops_http.rs  lib.rs  main.rs  server_manager.rs  updater.rs
src-tauri/src/commands/: mod.rs
(+403 files in other folders)
