[package]
name = "ttmevolve"
version = "0.7.0"
description = "TTMEvolve — Self-evolving TapMaker Development Agent"
authors = ["灰語 & 嗒啦啦"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ttmevolve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
once_cell = "1.20"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
incremental = false